[gd_scene load_steps=6 format=3 uid="uid://tthcvddrm1xa"]

[ext_resource type="Script" path="res://Scripts/enemies.gd" id="1_8ht00"]
[ext_resource type="Texture2D" uid="uid://djxgi2vs77tci" path="res://Assests/Sprites/Enemies/idle1.png" id="2_n1unb"]
[ext_resource type="PackedScene" uid="uid://d3ibij0xqp3d0" path="res://Scenes/Items-Effectors/TakeDmg.tscn" id="3_amcns"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ek8gv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vooe"]
size = Vector2(23.7427, 3.46672)

[node name="enemies" type="Node2D"]
position = Vector2(0, 28)
scale = Vector2(1.3899, 1.22593)
script = ExtResource("1_8ht00")
scroll_speed = 6.75

[node name="Idle1" type="Sprite2D" parent="."]
position = Vector2(-1, -32.3126)
scale = Vector2(1, 1.01008)
texture = ExtResource("2_n1unb")

[node name="DMG" parent="." instance=ExtResource("3_amcns")]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DMG"]
visible = false
position = Vector2(-2.15843, -26.9183)
scale = Vector2(1.4, 2.32657)
shape = SubResource("CircleShape2D_ek8gv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DMG"]
position = Vector2(-1, -32)
polygon = PackedVector2Array(6.03633, -19.3896, 8.91424, -16.1267, 11.7921, -11.2325, 13.9506, -3.89112, 13.9506, 9.1602, 7.47529, 17.3173, 13.2311, 30.3686, -14.109, 30.3686, -9.79214, 17.3173, -16.9869, 8.34449, -16.9869, -3.89112, -14.8285, -10.4168, -11.2311, -16.9424, -6.91424, -20.2053, -0.438952, -21.8367)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.48183, -12.1299)
scale = Vector2(1.54324, 1.071)

[node name="slamKill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slamKill"]
position = Vector2(-2.8779, -51.3896)
shape = SubResource("RectangleShape2D_2vooe")
one_way_collision = true

[connection signal="body_entered" from="DMG" to="." method="_on_dmg_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="slamKill" to="." method="_on_slam_kill_body_entered"]
